--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "to-do-list",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "app.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
+  },
+  "engines": {
+    "node": "~8.9.3",
+    "npm": "~5.5.1"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.6.1",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/animations": "^5.1.3",
     "@angular/cdk": "^5.0.3",
     "@angular/common": "^5.0.0",
@@ -27,6 +35,7 @@
     "angular-font-awesome": "^3.1.2",
     "angularfire2": "^5.0.0-rc.4",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "firebase": "^4.6.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -34,8 +43,6 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.1",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
