--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.6.1",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/animations": "^5.1.3",
     "@angular/cdk": "^5.0.3",
     "@angular/common": "^5.0.0",
