--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@angular/cli": "1.6.1",
     "@angular/compiler-cli": "^5.0.0",
+    "typescript": "~2.4.2",
     "@angular/animations": "^5.1.3",
     "@angular/cdk": "^5.0.3",
     "@angular/common": "^5.0.0",
@@ -58,7 +59,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "tslint": "~5.7.0"
   }
 }
